<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <parent>
    <groupId>org.opennms</groupId>
    <artifactId>org.opennms.features</artifactId>
    <version>30.0.5-SNAPSHOT</version>
  </parent>

  <modelVersion>4.0.0</modelVersion>
  <groupId>org.opennms.features</groupId>
  <artifactId>org.opennms.features.topology</artifactId>

  <name>OpenNMS :: Features :: Topology (OSGi project)</name>

  <!--
   | describe your project here
  -->

  <description>Generated using Pax-Construct</description>

  <properties>
    <!--
     | some example OSGi runtime properties
    -->
    <org.osgi.service.http.port>8080</org.osgi.service.http.port>
    <org.osgi.service.http.port.secure>8443</org.osgi.service.http.port.secure>
  </properties>

  <packaging>pom</packaging>

  <modules>
    <module>features</module>
    <module>poms</module>
    <module>provision</module>
    <module>org.opennms.features.topology.api</module>
    <module>org.opennms.features.topology.app</module>
    <module>org.opennms.features.topology.link</module>
    <module>org.opennms.features.topology.persistence</module>
    <module>org.opennms.features.topology.shell</module>
    <module>plugins</module>
    <module>themes</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.ops4j</groupId>
        <artifactId>maven-pax-plugin</artifactId>
        <inherited>false</inherited>
        <configuration>
          <!--
           | some example Pax-Runner settings
          -->
          <provision>
            <param>--platform=equinox</param>
            <param>scan-bundle:mvn:org.apache.karaf.jaas/org.apache.karaf.jaas.boot/${karafVersion}</param>
            <param>scan-features:mvn:org.apache.karaf.features/standard/${karafVersion}/xml/features!/http-whiteboard</param>
            <param>--noConsole</param>
          </provision>
        </configuration>
        <executions>
          <!--
           | uncomment to auto-generate IDE files
          <execution>
            <id>ide-support</id>
            <goals>
              <goal>eclipse</goal>
            </goals>
          </execution>
          -->
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
